[package]
name = "gcs-server"
version = "0.5.1"
authors = ["Arco Hsieh <yiyezhihen@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["gcs", "api"]
description = "The unofficial GCS API server in Rust"
homepage = "https://github.com/WF-Engineering/gcs-server"
repository = "https://github.com/WF-Engineering/gcs-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-web = "3.3"
base64 = "0.12.0"
bytes = "0.5.6"
chrono = { version = "0.4.10", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7.0"
envy = "0.4"
futures = "0.3.1"
google-storage1 = "1.0"
hyper = "^0.10"
hyper-rustls = "^0.6"
log = "0.4"
sanitize-filename = "0.3"
serde = "^1.0"
serde_json = "^1.0"
thiserror = "1.0"
yup-oauth2 = "^1.0"
